--- a/local_settings.py.in
+++ b/local_settings.py.in
@@ -18,6 +18,13 @@ UPDATE_HOURS_REMINDER_DAYS = 3
 # Permitted values are 'bugzilla.BugzillaClient' or 'fogbugz.FogBugzClient'
 BUG_TRACKER_TYPE = "fogbugz.FogBugzClient"
 
+# List all the data sources (rooted at berserk2.timeline.sources) that should
+# be run on scheduled intervals for the timeline app.  If you don't want to use
+# timeline, just comment out the sources below.
+TIMELINE_SOURCES = (
+    #'FogBugzEmailSource',
+)
+
 # Settings for the FogBugz email source for berserk's timeline
 # This source polls an IMAP server at regular intervals to feed update emails
 # into the timeline
