Modernize database definitions

--- a/local_settings.py.in
+++ b/local_settings.py.in
@@ -2,12 +2,14 @@
 
 DEBUG = True
 
-DATABASE_ENGINE = ''           # 'postgresql_psycopg2', 'postgresql', 'mysql', 'sqlite3' or 'oracle'.
-DATABASE_NAME = ''             # Or path to database file if using sqlite3.
-DATABASE_USER = ''             # Not used with sqlite3.
-DATABASE_PASSWORD = ''         # Not used with sqlite3.
-DATABASE_HOST = ''             # Set to empty string for localhost. Not used with sqlite3.
-DATABASE_PORT = ''             # Set to empty string for default. Not used with sqlite3.
+DATABASES = {
+    'default': {
+        'NAME': '',
+        'ENGINE': '',
+        'USER': '',
+        'PASSWORD': '',
+    }
+}
 
 # How far to look back when notifying users about not updating their hours.
 # Set this to a number > 2 if you don't want users going crazy, or worse yet,
